--- a/.github/workflows/orca-iac-check.yml
+++ b/.github/workflows/orca-iac-check.yml
@@ -3,18 +3,36 @@ on:
   # Scan for each push event on your protected branch. If you have a different branch configured, please adjust the configuration accordingly by replacing 'main'.
   push:
     branches: [ "main" ]
-  # NOTE: To enable scanning for pull requests, uncomment the section below.
-  #pull_request:
+    paths:
+      - '**.tf'
+      - '**.json'
+      - '**.yml'
+      - '**.yaml'
+      
+  pull_request:
     #branches: [ "main" ]
-  # NOTE: To schedule a daily scan at midnight, uncomment the section below.
-  #schedule:
-    #- cron: '0 0 * * *'
+    paths:
+      - '**.tf'
+      - '**.json'
+      - '**.yml'
+      - '**.yaml'
+    types: [opened, synchronize, reopened]
+    
+permissions: 
+  actions: read
+  contents: read
+  checks: write
+  issues: write
+  pull-requests: write
+  security-events: write
+  statuses: write
+
 jobs:
   orca-iac_scan:
     name: Orca IaC Scan
     runs-on: ubuntu-latest
     env:
-      PROJECT_KEY: default # Set the desired project to run the cli scanning with
+      PROJECT_KEY: default
     steps:
       # Checkout your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repository
@@ -26,5 +44,3 @@ jobs:
           api_token: ${{ secrets.ORCA_SECURITY_API_TOKEN }}
           project_key: ${{ env.PROJECT_KEY }}
           path: ./
-            # scanning directories: ./terraform/ ./sub-dir/ and a file: ./Dockerfile
-            #"terraform,sub-dir,other-sub-dir/Dockerfile"
