--- a/.github/workflows/orca-iac-check.yml
+++ b/.github/workflows/orca-iac-check.yml
@@ -34,9 +34,11 @@ jobs:
     env:
       PROJECT_KEY: default
     steps:
-      # Checkout your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 1
 
       - name: Run Orca IaC Scan
         uses: orcasecurity/shiftleft-iac-action@v1
