--- a/.github/workflows/orca-iac-check.yml
+++ b/.github/workflows/orca-iac-check.yml
@@ -37,6 +37,9 @@ jobs:
       # Checkout your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 1
 
       - name: Run Orca IaC Scan
         uses: orcasecurity/shiftleft-iac-action@v1
