--- a/.github/workflows/orca-iac-check.yml
+++ b/.github/workflows/orca-iac-check.yml
@@ -45,3 +45,4 @@ jobs:
           project_key: ${{ env.PROJECT_KEY }}
           path: "./"
           show_annotations: true
+          custom_controls: "./.github/workflows/opa_policies/custom_queries"
