--- a/.github/workflows/orca-iac-check.yml
+++ b/.github/workflows/orca-iac-check.yml
@@ -40,17 +40,17 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.ref }}
         
-      - name: add git permissions
-        run: |
-            curl -sfL 'https://raw.githubusercontent.com/orcasecurity/orca-cli/main/install.sh' | bash -s
-            orca-cli -h
-            orca-cli -p ${{ env.PROJECT_KEY }} -k ${{ secrets.ORCA_SECURITY_API_TOKEN }} iac scan --path ./
-      # - name: Run Orca IaC Scan
-      #   uses: orcasecurity/shiftleft-iac-action@v1
-      #   id: orca_scan
-      #   with:
-      #     api_token: ${{ secrets.ORCA_SECURITY_API_TOKEN }}
-      #     project_key: ${{ env.PROJECT_KEY }}
-      #     path: "./"
-      #     show_annotations: true
-          # custom_controls: "./.github/workflows/opa_policies/custom_queries"
+      # - name: add git permissions
+      #   run: |
+      #       curl -sfL 'https://raw.githubusercontent.com/orcasecurity/orca-cli/main/install.sh' | bash -s
+      #       orca-cli -h
+      #       orca-cli -p ${{ env.PROJECT_KEY }} -k ${{ secrets.ORCA_SECURITY_API_TOKEN }} iac scan --path ./
+      - name: Run Orca IaC Scan
+        uses: orcasecurity/shiftleft-iac-action@v1
+        id: orca_scan
+        with:
+          api_token: ${{ secrets.ORCA_SECURITY_API_TOKEN }}
+          project_key: ${{ env.PROJECT_KEY }}
+          path: "./"
+          show_annotations: true
+          custom_controls: "./.github/workflows/opa_policies/custom_queries"
