--- a/.github/workflows/orca-iac-check.yml
+++ b/.github/workflows/orca-iac-check.yml
@@ -37,6 +37,9 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.base_ref }}  # Target branch of PR
+          fetch-depth: 0
         #with:
         #  fetch-depth: 0
         #  ref: ${{ github.event.pull_request.head.ref }}
